# lattice_mc

./: .coveragerc  .gitignore  .travis.yml  LICENSE  README  README.md  codemeta.json  paper.bib  paper.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
docs/: Makefile  requirements.txt
docs/source/: blocked_lattice.rst  conf.py  index.rst  lattice_mc.rst  modules.rst  readme.rst
examples/: lattice_mc_examples.ipynb
lattice_mc/: __init__.py  atom.py  cluster.py  constants.py  error.py  global_vars.py  init_lattice.py  jump.py  lattice.py  lattice_run.py  lattice_site.py  lookup_table.py  options.py  simulation.py  species.py  transitions.py
tests/: test_atom.py  test_cluster.py  test_constants.py  test_global_vars.py  test_init_lattice.py  test_integration_tests.py  test_jump.py  test_lattice.py  test_lattice_integration.py  test_lattice_site.py  test_lookup_table.py  test_options.py  test_simulation.py  test_species.py  test_transitions.py
