[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "lattice_mc"
version = "1.0.3"
description = "A lattice-gas Monte-Carlo simulation tool"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Benjamin J. Morgan", email = "b.j.morgan@bath.ac.uk" },
]
keywords = ["monte-carlo", "lattice-gas", "correlation-factors"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "matplotlib",
    "pandas",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "pytest-cov",
    "ruff",
    "scipy-stubs",
]

[project.urls]
Homepage = "https://github.com/bjmorgan/lattice_mc"
Repository = "https://github.com/bjmorgan/lattice_mc"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # Long lines in docstrings; will be addressed with type hints PR

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.setuptools.package-data]
lattice_mc = ["py.typed"]

[tool.coverage.run]
source = ["lattice_mc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
